# chatty

./: .env  .gitignore  Dockerfile  Makefile  docker-compose.yml
.github/workflows/: python-app.yml
backend/: db.sqlite3  pyproject.toml  requirements.txt
backend/api/: __init__.py
backend/api/chats/: serializers.py  views.py
backend/api/users/: views.py
backend/backend/: asgi.py  settings.py  urls.py
backend/backend/fixtures/: conversations.json  messages.json  users.json
backend/chat/: admin.py  consumers.py  middleware.py  models.py  routing.py  views.py
backend/chat/migrations/: 0001_initial.py  0002_alter_message_unique_together.py  0003_migration_name.py  0004_conversation_remove_message_channel_and_more.py  0005_remove_conversation_id_remove_message_id_and_more.py  0006_rename_uuid_conversation_id_rename_uuid_message_id.py  0007_alter_conversation_id_alter_message_id.py
backend/chat/templates/chat/: room.html
backend/services/nginx/: Dockerfile  nginx.conf
frontend/: .babelrc  .eslintrc.cjs  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.tsx  index.jsx  router.jsx  socket.js  utils.ts  websocket.js
frontend/src/axios/: index.js
frontend/src/components/: ActiveConversations.test.jsx  ActiveConversations.tsx  Chat.tsx  ChatLoader.tsx  Conversations.tsx  Login.tsx  Message.tsx  Navbar.tsx  ProtectedRoute.tsx  index.ts
frontend/src/context/: AuthContext.tsx
frontend/src/models/: Message.ts
frontend/src/routes/: index.js
frontend/src/services/: AuthHeaders.ts  AuthService.ts
(+4 files in other folders)
